1、Java21 虚拟线程 2、Spring Boot3 通过 application.yml 配置 keep-alive: true 和 threads.virtual.enabled: true 启用虚拟线程提高吞吐量 3、Spring Boot3 启用HTTP 响应压缩 4、Spring Boot3 启用mvc.problemdetails.enabled: true 设置 404 返回 json 格式，而不是返回页面 5、Spring Boot3 启用本地缓存并使用 caffeine 作为本地缓存。 6、Spring Boot3 使用MyBatis-Plus【Spring Boot2及以下用的是 mybatis-plus-boot-starter，Spring Boot3开始用 mybatis-plus-spring-boot3-starter】 7、Spring Boot3 使用 新一代 Rest 客户端 RestClient 和 旧版 RestTemplate 配置 Apache httpclient5 连接池进行远程调用 8、Spring Boot3 通过配置 maven-compiler-plugin 来启用 -parameters【编译前后方法的参数名称一致】、--enable-preview 启用Java21 预览功能